plugins {
    alias(libs.plugins.android.application)
    alias(libs.plugins.kotlin.android)
}

android {
    namespace 'io.github.simonhalvdansson.flux'
    compileSdk 36

    defaultConfig {
        applicationId "io.github.simonhalvdansson.flux"
        minSdk 34
        targetSdk 36
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    buildFeatures {
        viewBinding true
        buildConfig true
    }
}

dependencies {

    implementation 'com.google.android.material:material:1.14.0-alpha05'

    implementation libs.androidx.core.ktx
    implementation libs.okhttp
    testImplementation libs.junit
    androidTestImplementation libs.androidx.junit
    androidTestImplementation libs.androidx.espresso.core
}
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}
